--- a/Web4/BlendedAPI/Styles/other.less
+++ b/Web4/BlendedAPI/Styles/other.less
@@ -9,6 +9,12 @@
 
   @oli-red: #ff6022;
 
+  .primary {
+    color: white;
+    padding: 8px;
+    background-color: @brand-primary;
+  }
+
   .container-fluid {
     padding: 0;
   }
@@ -43,11 +49,6 @@
 
   .lm-top-margin-lg {
     margin-top: 40px;
-  }
-
-  .wizzard {
-    font-size: 110%;
-    td {vertical-align:middle;}    
   }
 
   h3 .flag-small {
@@ -126,5 +127,13 @@
 
   .position-relative {
     position: relative;
+  }
+
+  .wizzard {
+    font-size: 110%;
+
+    td {
+      vertical-align: middle;
+    }
   }
 }
