--- a/Web4/JsLib/css/Course.less
+++ b/Web4/JsLib/css/Course.less
@@ -1097,12 +1097,20 @@ input {
   }
 }
 /********************** MEDIA ***********************/
-@oli-dialog-a: #A6D711;
+/*@oli-dialog-a: #A6D711;
 @oli-dialog-b: #FDAC19;
 @oli-dialog-c: #B9DEFA;
 @oli-dialog-d: #FF575E;
 @oli-dialog-e: #9382FF;
-@oli-dialog-f: #E3B8F8;
+@oli-dialog-f: #E3B8F8;*/
+
+@oli-dialog-a: #B1F1B4;
+@oli-dialog-b: #FFDBB7;
+@oli-dialog-c: #B9DEFA;
+@oli-dialog-d: #FFFF84;
+@oli-dialog-e: #DAD5FF;
+@oli-dialog-f: #FFC1C1;
+
 
 .oli-sent {
   cursor: pointer;
