--- a/Web4/BlendedAPI/vyzva/Views/lector.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector.html
@@ -3,12 +3,42 @@
 <h2><i class="fa fa-user-times"></i> {{::ts.title}}</h2>
 
 <div class="alert alert-success lm-bottom-margin">
-  TODO Popis<br />
-  - vysvětlení ohledně klíčů podobné jako u Správce<br />
-  - motivační info o prohlížení výsledku studentů
+  <div class="row">
+    <div class="col-sm-6">
+      <h4>Zahájení výuky (tj. rozdání <i>Licenčních klíčů</i>)</h4>
+      <ul>
+        <li>
+          Každému <i>Studentovi</i> Vaší <i>Studijní skupiny</i> dejte jeden z <i>Licenčních klíčů</i> ze seznamu níže.
+        </li>
+        <li>
+          <i>Student</i> na hlavní stránce aplikace zadá tento <i>Licenční klíč</i> tak, jako jste Vy zadal <i>Licenční klíč</i>, který Vám předal Váš správce výuky.
+        </li>
+        <li>
+          Po zadání <i>Licenčního klíče</i> <i>Studentem</i>:<br /> 
+          - bude student moci spustit kurz<br />
+          - údaje o studentovi (Jméno, Příjmení, EMail) se objeví v tabulce níže.
+        </li>
+        <li>
+          Jak Vy tak kdokoliv z Vaší školy si může vyzkoušet kurz. K tomu jsou určeny <i>Licenční klíče</i> pro <i>Návštěvníky</i>.
+          Tyto klíče můžete poskytnout komukoliv - výuka ale v tomto případě nebude řízena <i>Učitelem</i>.
+        </li>
+      </ul>
+    </div>
+    <div class="col-sm-6">
+      <h4>Řízení výuky</h4>
+      U zvoleného <i>Studenta</i> klikněte na tlačítko <b>Výsledky</b>. To vám umožní:
+      <ul>
+        <li>moci prohlížet výsledky práce <i>Studentů</i></li>
+        <li>poslouchat nahrávky <i>Studentů</i> v rámci audio-orální metody</li>
+        <li>ohodnotit kvalitu mluvenoho projevu <i>Studentů</i> ve vstupním, závěrečném a kontrolních testech</li>
+        <li>mít přehled o čase, který <i>Student</i> strávil poslechem nahrávek rodilých mluvčích, o množství jím nahraného zvuku apod.</li>
+      </ul>
+    </div>
+  </div>
 </div>
 
 <div vyzva$lector$users students="::ts.students" ts="::ts"></div>
+<div vyzva$lector$visitors students="::ts.visitors" ts="::ts"></div>
 
 <script type="text/ng-template" id="vyzva$lector$user.html">
   <td><b>{{::student().key.firstName}} {{::student().key.lastName}} <span ng-if="student().key.email">(<a href="mailto:{{::student().key.email}}">{{::student().key.email}}</a>)</span></b></td>
@@ -17,6 +47,7 @@
 </script>
 
 <script type="text/ng-template" id="vyzva$lector$users.html">
+  <h3 class="primary">Seznam studentů</h3>
   <table class="table table-bordered table-striped">
     <thead>
       <tr class="active">
@@ -27,6 +58,24 @@
     </thead>
     <tr ng-repeat="student in ::students()" vyzva$lector$user="" student="::student" ts="::ts()"></tr>
   </table>
+</script>
+
+<script type="text/ng-template" id="vyzva$lector$visitors.html">
+  <h3 class="primary">Seznam návštěvníků</h3>
+  <table class="table table-bordered table-striped">
+    <thead>
+      <tr class="active">
+        <th>Jméno, příjmení, email</th>
+        <th>Licenční klíč</th>
+      </tr>
+    </thead>
+    <tr ng-repeat="student in ::students()" vyzva$lector$visitor="" student="::student" ts="::ts()"></tr>
+  </table>
+</script>
+
+<script type="text/ng-template" id="vyzva$lector$visitor.html">
+  <td><b>{{::student().key.firstName}} {{::student().key.lastName}} <span ng-if="student().key.email">(<a href="mailto:{{::student().key.email}}">{{::student().key.email}}</a>)</span></b></td>
+  <td>{{::student().key.keyStr}}</td>
 </script>
 
 <script type="text/ng-template" id="vyzva$lector$tabs.html">
